--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
             "es6"
         ],
         "sourceMap": true,
-        "rootDir": "src"
+        "rootDir": "src",
+        "allowJs": true
     },
     "exclude": [
         "node_modules",
